2004-11-11  Rick Moseley  <rmoseley@redhat.com>
	* plugin.xml: change version to 1.2

2004-11-08  Rick Moseley  <rmoseley@redhat.com>

	* src/org/eclipse/cdt/rpm/core/LinuxShellCmds.java (executeLinuxCommand): add
	  capability to capture output from both stdout and stderr simultaneously

2004-11-04  Jeffery Pound  <jpound@redhat.com>

	* src/org/eclipse/cdt/rpm/core/LinuxShellCmds.java (): get commands from a 
	   properties bundle
	* src/org/eclipse/cdt/rpm/core/RPMCore.java (): ditto
	* src/org/eclipse/cdt/rpm/core/RPMCorePlugin.java (): ditto
	* src/org/eclipse/cdt/rpm/core/SpecFileOps.java (): ditto
	* src/org/eclipse/cdt/rpm/core/SRPMImport.java (): ditto
	* src/org/eclipse/cdt/rpm/core/TarOps.java (): ditto

2004-11-02  Rick Moseley  <rmoseley@redhat.com>

	* src/org/eclipse/cdt/rpm/core/LinuxShellCmds.java (getInfo): change method to be
		able to handle output to both stderr and stdout simultaneously
	* src/org/eclipse/cdt/rpm/core/StreamReaderThread.java : new class to handle
	   reading of stdout and stderr from shell commands

2004-09-08  Rick Moseley  <rmoseley@redhat.com>
	
	* fix screw-up from merge of branch from below fix

2004-09-07  Rick Moseley  <rmoseley@redhat.com>

	* src/com/redhat/eclipse/rpm/core/SpecFileOps.java (createRPMspec): remove
	  call to "id" to get group id; modify "make" command for creating spec file

2004-09-01  Rick Moseley  <rmoseley@redhat.com>

	* src/com/redhat/eclipse/rpm/core/SpecFileOps.java: clean up unnecessary "$NON-NLS-1"s
	* src/com/redhat/eclipse/rpm/core/TarOps.java: clean up unnecessary "$NON-NLS-1"s
	* src/com/redhat/eclipse/rpm/core/SRPMImport.java: clean up unnecessary "$NON-NLS-1"s
	* src/com/redhat/eclipse/rpm/core/RPMCore.java: * clean up unnecessary "$NON-NLS-1"s
	  add a couple that were needed
	* src/com/redhat/eclipse/rpm/core/RPMExportCore.java (renameSpecFile): 
	  BZ #131300
	* (run): BZ #131300
	* clean up unnecessary "$NON-NLS-1"s
	  
2004-08-31  rmoseley  <rmoseley@dhcp-232.hsv.redhat.com>
