@@ -150,6 +150,7 @@ RPMCore.executing_the_shell_script_to_untar_the_source._Command____23=executing 
 RPMCore.Error_copying_source_from__24=Error copying source from 
 RPMCore._to__25=\ to 
 RPMCore.__26=\ 
+RPMCore.0=generateChecksum: Error trying to access file: 
 RPMCore.Error_trying_to_copy_file__27=Error trying to copy file 
 RPMCore._to__28=\ to 
 RPMCore.Error_trying_to_set_up_rpm__29=Error trying to set up rpm 
